# meal-advisor

./: pyproject.toml
.streamlit/: config.toml  credentials.toml
meal_advisor/: clean_healthyfitnessmeals_data.py  comma_ing.txt  functions.py  main.py  or_ingredients.txt  populate_table.py  scrape_healthyfitnessmeals.py  scrape_mealdb.py  test.ipynb  vct_calculator.py
meal_advisor/.streamlit/: config.toml
meal_advisor/config_files/: api_keys.py  config.js  db_config.json
meal_advisor/data/: category_meal_link.csv  db_config.json  list_of_ingredients.txt  recipes_clean_healthyfitnessmeals.csv  recipes_raw.json  recipes_raw_mealdb.json
meal_advisor/db/: db.sql
meal_advisor/pages/: filter_meal.py  plan_daily_meal.py  random_meal.py
meal_advisor/style/: border_style_1.css  center_vertical_horizontal.css  dataframe.css  style.css
tests/: test_meal_advisor.py
